Add Tailwind setup and database schema

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,31 @@
- 
+# API Keys
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here
+GOOGLE_PROJECT_ID=your_google_project_id_here
+MISTRAL_API_KEY=your_mistral_api_key_here
+
+# Database
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# GitHub OAuth
+NEXT_PUBLIC_GITHUB_CLIENT_ID=your_github_client_id_here
+
+# E2B
+E2B_API_KEY=your_e2b_api_key_here
+
+# PostHog
+NEXT_PUBLIC_POSTHOG_KEY=your_posthog_key_here
+NEXT_PUBLIC_POSTHOG_HOST=your_posthog_host_here
+
+# KV Cache
+KV_URL=your_kv_url_here
+KV_REST_API_URL=your_kv_rest_api_url_here
+KV_REST_API_TOKEN=your_kv_rest_api_token_here
+KV_REST_API_READ_ONLY_TOKEN=your_kv_read_only_token_here
+
+# Stripe
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here 
