--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.5",
+    "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
