--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "react-textarea-autosize": "^8.5.6",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "vercel": "^39.2.0",
     "zod": "^3.24.1"
@@ -82,7 +81,9 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.49",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2"
   },
   "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
